feat: added comments app
